<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:id="@+id/TIL_Border_ll">
        <TextView
            android:textColor="@android:color/black"
            android:id="@+id/DTIL_tv_day"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:hint="00 d"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:textColor="@android:color/black"
            android:id="@+id/DTIL_tv_hour"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:hint="00 h"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content">
        </TextView>

        <TextView
            android:textColor="@android:color/black"
            android:id="@+id/DTIL_tv_min"
            android:textSize="30dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:hint="00 m"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content">
        </TextView>



        <TextView
            android:textColor="@android:color/black"
            android:id="@+id/DTIL_tv_sec"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:hint="00 s"
            android:maxLength="8"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content">
        </TextView>


        <TextView
            android:layout_marginRight="5dp"
            android:onClick="onClick"
            android:background="@drawable/ic_close_back_arrow_black"
            android:id="@+id/DTIL_btn_delete"
            android:layout_gravity="center"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

        </TextView>

        </LinearLayout>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:textAlignment="center"
                    android:id="@+id/DTIL_btn_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="1"
                    android:textColor="@color/red"
                    android:textSize="30sp">

                </TextView>

                <TextView
                    android:textAlignment="center"
                    android:id="@+id/DTIL_btn_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="2"
                    android:onClick="onClick"
                    android:textColor="@color/red"
                    android:textSize="30dp">

                </TextView>

                <TextView
                    android:textAlignment="center"
                    android:onClick="onClick"
                    android:id="@+id/DTIL_btn_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="3"
                    android:textColor="@color/red"
                    android:textSize="30dp">

                </TextView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:textAlignment="center"
                    android:onClick="onClick"
                    android:id="@+id/DTIL_btn_4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="4"
                    android:textColor="@color/red"
                    android:textSize="30dp">

                </TextView>

                <TextView
                    android:textAlignment="center"
                    android:onClick="onClick"
                    android:id="@+id/DTIL_btn_5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="5"
                    android:textColor="@color/red"
                    android:textSize="30dp">

                </TextView>

                <TextView
                    android:textAlignment="center"
                    android:onClick="onClick"
                    android:id="@+id/DTIL_btn_6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="6"
                    android:textColor="@color/red"
                    android:textSize="30dp">

                </TextView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:textAlignment="center"
                    android:onClick="onClick"
                    android:id="@+id/DTIL_btn_7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="7"
                    android:textColor="@color/red"
                    android:textSize="30dp">

                </TextView>

                <TextView
                    android:onClick="onClick"
                    android:textAlignment="center"
                    android:id="@+id/DTIL_btn_8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="8"
                    android:textColor="@color/red"
                    android:textSize="30dp">

                </TextView>

                <TextView
                    android:textAlignment="center"
                    android:onClick="onClick"
                    android:id="@+id/DTIL_btn_9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="9"
                    android:textColor="@color/red"
                    android:textSize="30dp">

                </TextView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:onClick="onClick"
                    android:id="@+id/DTIL_btn_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAlignment="center"
                    android:textColor="@color/red"
                    android:textSize="30dp">
                </TextView>




            </LinearLayout>

            <RadioGroup
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"

                android:id="@+id/DTIL_rg_main"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/DTIL_rd_add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/add"></RadioButton>

                <RadioButton
                    android:id="@+id/DTIL_rd_sub"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/subtract"></RadioButton>

                <RadioButton
                    android:id="@+id/DTIL_rd_new"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/new_value"></RadioButton>
            </RadioGroup>

            <EditText
                android:id="@+id/DTIL_et_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:inputType="number"
                android:maxLength="8"
                android:visibility="gone">

            </EditText>


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_marginLeft="10dp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="25dp"
                    android:textSize="24dp"
                    android:text="@string/current_value"
                    android:id="@+id/DTIL_tv_current_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>

                <TextView
                    android:textColor="@android:color/black"
                    android:textSize="24dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/new_value_dots"
                    android:id="@+id/DTIL_tv_new_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>




            </LinearLayout>
            <LinearLayout
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="50dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:onClick="onClick"
                    android:textColor="@color/red"
                    android:text="@string/cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/DTIL_btn_cancel">
                </TextView>
                <Space
                    android:layout_width="30dp"
                    android:layout_height="wrap_content">
                </Space>

                <TextView
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textColor="@color/red"
                    android:text="@string/save"
                    android:onClick="onClick"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/DTIL_btn_save">
                </TextView>





            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>